--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="responsive-travel-website/travel.html" class="nav__link active-link">Home</a>
+                            <a href="https://chromedino.com" class="nav__link active-link">Home</a>
                         </li>
 
                         <li class="nav__item">
-                            <a href="responsive-travel-website/travel.html" class="nav__link">About</a>
+                            <a href="https://chromedino.com" class="nav__link">About</a>
                         </li>
 
                         <li class="nav__item">
-                            <a href="responsive-travel-website/travel.html" class="nav__link">Candy</a>
+                            <a href="https://chromedino.com" class="nav__link">Candy</a>
                         </li>
 
                         <li class="nav__item">
-                            <a href="responsive-travel-website/travel.html" class="nav__link">New</a>
+                            <a href="https://chromedino.com" class="nav__link">New</a>
                         </li>
 
-                        <a href="responsive-travel-website/travel.html" class="button button--ghost">Support</a>
+                        <a href="https://chromedino.com" class="button button--ghost">Support</a>
                     </ul>
 
                     <div class="nav__close" id="nav-close">
